fix spacing on sidebar, fix layout of main grid

--- a/style.css
+++ b/style.css
@@ -38,9 +38,13 @@ body {
 
 .main-container {
     display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 60% repeat(auto-fit, minmax(250px, 1fr));
-    grid-column: 2 / span 3;
+    grid-template-areas:
+    "main main announcement"
+    "main main announcement"
+    "main main trending"
+    "main main trending";
+    column-gap: 10px;
+    row-gap: 10px;
 }
 
 /* ===== ^ Website Layout ^ ===== */
@@ -141,7 +145,7 @@ body {
     background-color: #60a5fa;
     color: #fff;
     display: grid;
-    grid-template-rows: 1fr 3fr 2fr 4fr;
+    grid-template-rows: 1fr 3fr 2fr 6fr;
     border: 1px solid blue;
 }
 
@@ -195,6 +199,9 @@ body {
     padding: 30px 16px;
 }
 
+.projects-container {
+    grid-area: main;
+}
 .projects-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -234,11 +241,15 @@ body {
     border-bottom: 2px solid lightgray;
 }
 
+.announcements-container {
+    grid-area: announcement;
+}
+
 .announcement:last-child {
     border: 0;
 }
 .trending-container {
-    grid-column: 2;
+    grid-area: trending;
 }
 
 .trending-grid {
